Java 17 features.